# RAG-DeepSeek-r1

./: .gitignore  README.md  app.py  pyproject.toml
accord/: __init__.py  chatbot.py  constants.py  data_ingestor.py  database.py  entity.py  file_loader.py  utils.py
config/: config.yaml
